--- a/package.json
+++ b/package.json
@@ -17,10 +17,18 @@
   },
   "homepage": "https://github.com/link89/selenium-federation#readme",
   "devDependencies": {
+    "@types/koa": "^2.11.6",
+    "@types/koa-router": "^7.4.1",
+    "@types/lodash": "^4.14.165",
+    "@types/yargs": "^15.0.10",
     "ts-node": "^9.0.0",
     "typescript": "^4.1.2"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "koa": "^2.13.0",
+    "koa-router": "^10.0.0",
+    "lodash": "^4.17.20",
+    "yaml": "^1.10.0",
+    "yargs": "^16.1.1"
   }
 }
