--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "ts-node -r tsconfig-paths/register main.ts"
   },
   "repository": {
     "type": "git",
@@ -17,18 +18,27 @@
   },
   "homepage": "https://github.com/link89/selenium-federation#readme",
   "devDependencies": {
+    "@types/bluebird": "^3.5.33",
     "@types/koa": "^2.11.6",
+    "@types/koa-bodyparser": "^4.3.0",
     "@types/koa-router": "^7.4.1",
     "@types/lodash": "^4.14.165",
     "@types/yargs": "^15.0.10",
+    "@types/yup": "^0.29.9",
     "ts-node": "^9.0.0",
+    "tsconfig-paths": "^3.9.0",
     "typescript": "^4.1.2"
   },
   "dependencies": {
+    "axios": "^0.21.0",
+    "bluebird": "^3.7.2",
+    "get-port": "^5.1.1",
     "koa": "^2.13.0",
+    "koa-bodyparser": "^4.3.0",
     "koa-router": "^10.0.0",
     "lodash": "^4.17.20",
     "yaml": "^1.10.0",
-    "yargs": "^16.1.1"
+    "yargs": "^16.1.1",
+    "yup": "^0.31.1"
   }
 }
