--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "A lightweight alternative to selenium-grid.",
   "main": "dist/main.js",
   "files": [
+    "bin",
     "dist"
   ],
   "bin": {
-    "selenium-federation": "./main.js"
+    "selenium-federation": ".bin/selenium-federation"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
