--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "prepublishOnly": "rm -rf dist || true && tsc",
+    "prepublishOnly": "del dist || true && tsc",
     "start": "ts-node main.ts"
   },
   "repository": {
@@ -34,6 +34,7 @@
     "@types/lodash": "^4.14.165",
     "@types/yargs": "^15.0.10",
     "@types/yup": "^0.29.9",
+    "del-cli": "^3.0.1",
     "ts-node": "^9.0.0",
     "typescript": "^4.1.2"
   },
