--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "prepublishOnly": "del dist || true && tsc",
+    "prepublishOnly": "del dist && tsc",
     "start": "ts-node main.ts"
   },
   "repository": {
