--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@types/koa-bodyparser": "^4.3.0",
     "@types/koa-router": "^7.4.1",
     "@types/lodash": "^4.14.165",
+    "@types/uuid": "^8.3.0",
     "@types/yargs": "^15.0.10",
     "@types/yup": "^0.29.9",
     "del-cli": "^3.0.1",
@@ -46,6 +47,7 @@
     "koa-bodyparser": "^4.3.0",
     "koa-router": "^10.0.0",
     "lodash": "^4.17.20",
+    "uuid": "^8.3.1",
     "yaml": "^1.10.0",
     "yargs": "^16.1.1",
     "yup": "^0.31.1"
