chore: set keywords
Former-commit-id: b565e6a80e0e36257cc4463779dc23be14bf9a97

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "type": "git",
     "url": "git+https://github.com/link89/selenium-federation.git"
   },
+  "keywords": ["selenium", "webdriver", "testing"],
   "author": "",
   "license": "ISC",
   "bugs": {
