--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "koa-bodyparser": "^4.3.0",
     "koa-router": "^10.0.0",
     "lodash": "^4.17.20",
+    "systeminformation": "^4.32.0",
     "uuid": "^8.3.1",
     "yaml": "^1.10.0",
     "yargs": "^16.1.1",
