--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "prepublishOnly": "del dist && tsc",
-    "start": "ts-node main.ts"
+    "start": "ts-node src/main.ts"
   },
   "repository": {
     "type": "git",
