--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
     "typescript": "^4.1.2"
   },
   "dependencies": {
+    "@sentry/node": "^6.0.2",
+    "@sentry/tracing": "^6.0.2",
     "axios": "^0.21.0",
     "bluebird": "^3.7.2",
     "get-port": "^5.1.1",
