--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   ],
   "bin": {
     "selenium-federation": "./bin/selenium-federation",
+    "selenium-federation-check": "./bin/selenium-federation-check",
     "selenium-federation-pm2-start": "./bin/selenium-federation-pm2-start"
   },
   "scripts": {
@@ -54,6 +55,7 @@
     "koa-bodyparser": "^4.3.0",
     "koa-router": "^10.0.0",
     "lodash": "^4.17.20",
+    "selenium-webdriver": "^4.0.0-alpha.8",
     "systeminformation": "^4.32.0",
     "uuid": "^8.3.1",
     "yaml": "^1.10.0",
