--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "prepublishOnly": "del dist && tsc",
+    "prepack": "del dist && tsc",
     "start": "ts-node src/main.ts"
   },
   "repository": {
