--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "prepack": "del dist && tsc",
+    "prepack": "git clean -xdf -e node_modules && tsc",
     "start": "ts-node src/main.ts"
   },
   "repository": {
@@ -41,7 +41,6 @@
     "@types/uuid": "^8.3.0",
     "@types/yargs": "^15.0.10",
     "@types/yup": "^0.29.9",
-    "del-cli": "^3.0.1",
     "ts-node": "^9.0.0",
     "typescript": "^4.1.2"
   },
