--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "selenium-federation",
   "version": "0.6.6",
   "description": "A lightweight alternative to selenium-grid.",
+  "engines": {
+    "node": ">=14.14.0"
+  },
   "main": "dist/main.js",
   "files": [
     "bin",
@@ -35,30 +38,35 @@
   "devDependencies": {
     "@types/bluebird": "^3.5.33",
     "@types/koa": "^2.11.6",
-    "@types/koa-bodyparser": "^4.3.0",
-    "@types/koa-router": "^7.4.1",
-    "@types/lodash": "^4.14.165",
+    "@types/koa-bodyparser": "^4.3.3",
+    "@types/koa__router": "^8.0.8",
+    "@types/lodash": "^4.14.176",
     "@types/uuid": "^8.3.0",
+    "@types/ws": "^8.2.0",
     "@types/yargs": "^15.0.10",
-    "@types/yup": "^0.29.9",
     "ts-node": "^9.0.0",
-    "typescript": "^4.1.2"
+    "typescript": "^4.4.4"
   },
   "dependencies": {
+    "@koa/router": "^10.1.1",
     "@sentry/node": "^6.0.2",
     "@sentry/tracing": "^6.0.2",
+    "@types/http-proxy": "^1.17.7",
     "axios": "^0.21.0",
     "bluebird": "^3.7.2",
     "get-port": "^5.1.1",
-    "koa": "^2.13.0",
-    "koa-bodyparser": "^4.3.0",
-    "koa-router": "^10.0.0",
+    "http-proxy": "^1.18.1",
+    "koa": "^2.13.4",
+    "koa-bodyparser": "^2.5.0",
     "lodash": "^4.17.20",
-    "selenium-webdriver": "^4.0.0-alpha.8",
-    "systeminformation": "^5.6.4",
+    "path-to-regexp": "^6.2.0",
+    "purify-ts": "^1.1.0",
+    "selenium-webdriver": "^4.0.0",
+    "systeminformation": "^4.32.0",
     "uuid": "^8.3.1",
+    "ws": "^8.2.3",
     "yaml": "^1.10.0",
     "yargs": "^16.1.1",
-    "yup": "^0.31.1"
+    "yup": "^0.32.11"
   }
 }
