--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "selenium-federation",
-  "version": "0.6.6",
+  "version": "0.7.0-dev",
   "description": "A lightweight alternative to selenium-grid.",
   "engines": {
     "node": ">=14.14.0"
