--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@types/bluebird": "^3.5.33",
     "@types/koa": "^2.11.6",
     "@types/koa-bodyparser": "^4.3.3",
+    "@types/koa-logger": "^3.1.2",
     "@types/koa__router": "^8.0.8",
     "@types/lodash": "^4.14.176",
     "@types/uuid": "^8.3.0",
@@ -58,6 +59,7 @@
     "http-proxy": "^1.18.1",
     "koa": "^2.13.4",
     "koa-bodyparser": "^2.5.0",
+    "koa-logger": "^3.2.1",
     "lodash": "^4.17.20",
     "path-to-regexp": "^6.2.0",
     "purify-ts": "^1.1.0",
