--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
     "@types/ws": "^8.2.0",
     "@types/yargs": "^15.0.10",
     "ts-node": "^9.0.0",
-    "typescript": "^4.4.4"
+    "typescript": "^4.4.4",
+    "webdriverio": "^7.19.7"
   },
   "dependencies": {
     "@koa/router": "^10.1.1",
