feat: drivers endpoint

--- a/doc/sample-config.yaml
+++ b/doc/sample-config.yaml
@@ -10,3 +10,7 @@ drivers:
     maxSessions: 2
     webdriver:
       path: //../chromedriver.exe
+    defaultCapabilities:
+      "goog:chromeOptions":
+        args:
+          - --headless
