--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@types/koa__router": "^8.0.8",
     "@types/koa-bodyparser": "^4.3.3",
     "@types/koa-logger": "^3.1.2",
+    "@types/koa-send": "^4.1.3",
     "@types/lodash": "^4.14.176",
     "@types/uuid": "^8.3.0",
     "@types/ws": "^8.2.0",
@@ -61,6 +62,7 @@
     "koa": "^2.13.4",
     "koa-bodyparser": "^2.5.0",
     "koa-logger": "^3.2.1",
+    "koa-send": "^5.0.1",
     "lodash": "^4.17.20",
     "path-to-regexp": "^6.2.0",
     "purify-ts": "^1.1.0",
