--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "path-to-regexp": "^6.2.0",
     "purify-ts": "^1.1.0",
     "selenium-webdriver": "^4.0.0",
+    "serve-index": "^1.9.1",
     "systeminformation": "^5.11.15",
     "uuid": "^8.3.1",
     "ws": "^8.2.3",
