--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@types/koa-logger": "^3.1.2",
     "@types/koa-send": "^4.1.3",
     "@types/lodash": "^4.14.176",
+    "@types/shelljs": "^0.8.11",
     "@types/uuid": "^8.3.0",
     "@types/yargs": "^15.0.10",
     "ts-node": "^10.8.0",
@@ -68,6 +69,7 @@
     "path-to-regexp": "^6.2.0",
     "purify-ts": "^1.1.0",
     "selenium-webdriver": "^4.0.0",
+    "shelljs": "^0.8.5",
     "systeminformation": "^5.11.15",
     "uuid": "^8.3.1",
     "yaml": "^1.10.0",
