--- a/examples/provision-tasks-gallery.yaml
+++ b/examples/provision-tasks-gallery.yaml
@@ -1,5 +1,5 @@
 # This file is to collect some useful provision tasks as an reference.
-# Feel free to copy to your own configuration file
+# You can just copy tasks from here to build your own configuration file.
 
 # Webidriver download sites
 
