--- a/examples/provision-tasks-gallery.yaml
+++ b/examples/provision-tasks-gallery.yaml
@@ -9,7 +9,6 @@
 # geckodriver Chinese mirror: https://repo.huaweicloud.com/geckodriver/
 # msedgedriver: https://developer.microsoft.com/en-us/microsoft-edge/tools/webdriver/
 
-
 provision:
   tasks:
       # install chrome on mac os using dmg file 
@@ -23,14 +22,14 @@ provision:
         - brew install google-chrome
       
       # download and unzip chromedriver on windows, same for other drivers
-      # the webdriver.path should set to ./chromedriver.exe
+      # here we suppose webdriver.path should set to ./chromedriver.exe
     - download: https://registry.npmmirror.com/-/binary/chromedriver/103.0.5060.24/chromedriver_win32.zip
       cmds:
         - powershell Expand-Archive {download_file_path} -Force -DestinationPath .
         - move chromedriver.exe chromedriver-latest.exe  # (optional) rename after unzip, but don't forget to change webdriver.path to ./chromedirver-latest.exe
       
       # download and unzip chromedriver on mac osx, same for other drivers
-      # the webdriver.path should set to ./chromedriver 
+      # here we suppose webdriver.path is set to ./chromedriver 
     - download: https://registry.npmmirror.com/-/binary/chromedriver/103.0.5060.24/chromedriver_mac64.zip
       cmds:
         - unzip -f {download_file_path}
