--- a/examples/provision-tasks-gallery.yaml
+++ b/examples/provision-tasks-gallery.yaml
@@ -3,34 +3,45 @@
 
 # Webidriver download sites
 
-# chromedriver: https://chromedriver.storage.googleapis.com/index.html 
-# chromedriver Chinese mirror: https://registry.npmmirror.com/binary.html?path=chromedriver/
-# geckodriver: https://github.com/mozilla/geckodriver/releases
-# geckodriver Chinese mirror: https://repo.huaweicloud.com/geckodriver/
-# msedgedriver: https://developer.microsoft.com/en-us/microsoft-edge/tools/webdriver/
+## chromedriver: https://chromedriver.storage.googleapis.com/index.html 
+## chromedriver Chinese mirror: https://registry.npmmirror.com/binary.html?path=chromedriver/
+## geckodriver: https://github.com/mozilla/geckodriver/releases
+## geckodriver Chinese mirror: https://repo.huaweicloud.com/geckodriver/
+## msedgedriver: https://developer.microsoft.com/en-us/microsoft-edge/tools/webdriver/
+
+# Useful Tips
+
+## How to install msi without interactive: https://stackoverflow.com/a/8560308/3099733
+
 
 provision:
   tasks:
-      # install chrome on mac os using dmg file 
+    # install chrome on mac os using dmg file 
     - download: https://dl.google.com/chrome/mac/stable/GGRO/googlechrome.dmg
       cmds:
         - open -W {download_file_path}
         - cp -r "/Volumes/Google Chrome/Google Chrome.app" /Applications/ 
 
-      # install chrome on mac os using homebrew
+    # install chrome on mac os using homebrew
     - cmds:
         - brew install google-chrome
       
-      # download and unzip chromedriver on windows, same for other drivers
-      # here we suppose webdriver.path should set to ./chromedriver.exe
+    # download and unzip chromedriver on windows, same for other drivers
+    # here we suppose webdriver.path should set to ./chromedriver.exe
     - download: https://registry.npmmirror.com/-/binary/chromedriver/103.0.5060.24/chromedriver_win32.zip
       cmds:
         - powershell Expand-Archive {download_file_path} -Force -DestinationPath .
         - move chromedriver.exe chromedriver-latest.exe  # (optional) rename after unzip, but don't forget to change webdriver.path to ./chromedirver-latest.exe
       
-      # download and unzip chromedriver on mac osx, same for other drivers
-      # here we suppose webdriver.path is set to ./chromedriver 
+    # download and unzip chromedriver on mac osx, same for other drivers
+    # here we suppose webdriver.path is set to ./chromedriver 
     - download: https://registry.npmmirror.com/-/binary/chromedriver/103.0.5060.24/chromedriver_mac64.zip
       cmds:
         - unzip -f {download_file_path}
         - mv chromedriver chromedriver-latest  # (optional) rename after unzip, but don't forget to change webdriver.path to ./chromedriver-latest
+    
+    # install 7z on windows 
+    - download: https://www.7-zip.org/a/7z2107-x64.msi
+      cmds:
+        - msiexec /i "{download_file_path}" /qn /log 7z-install.log.txt
+    
