--- a/examples/sample-win-local-config.yaml
+++ b/examples/sample-win-local-config.yaml
@@ -13,6 +13,7 @@ drivers:
     maxSessions: 2
     webdriver:
       path: ./chromedriver.exe
+      args: ["--verbose"]
 
   - browserName: MicrosoftEdge
     maxSessions: 2
