--- a/examples/provision-tasks-gallery.yaml
+++ b/examples/provision-tasks-gallery.yaml
@@ -12,6 +12,7 @@
 # Useful Tips
 
 ## How to install msi without interactive: https://stackoverflow.com/a/8560308/3099733
+## Download Chrome Extension crx (Chinese): https://crxdl.com/
 
 
 provision:
@@ -31,7 +32,7 @@ provision:
     - download: https://registry.npmmirror.com/-/binary/chromedriver/103.0.5060.24/chromedriver_win32.zip
       cmds:
         - powershell Expand-Archive {download_file_path} -Force -DestinationPath .
-        - move chromedriver.exe chromedriver-latest.exe  # (optional) rename after unzip, but don't forget to change webdriver.path to ./chromedirver-latest.exe
+        - move /y chromedriver.exe chromedriver-latest.exe  # (optional) rename after unzip, but don't forget to change webdriver.path to ./chromedirver-latest.exe
       
     # download and unzip chromedriver on mac osx, same for other drivers
     # here we suppose webdriver.path is set to ./chromedriver 
