--- a/examples/provision-tasks-gallery.yaml
+++ b/examples/provision-tasks-gallery.yaml
@@ -3,7 +3,7 @@
 
 # Webidriver download sites
 
-## chromedriver: https://chromedriver.storage.googleapis.com/index.html 
+## chromedriver: https://chromedriver.storage.googleapis.com/index.html
 ## chromedriver Chinese mirror: https://registry.npmmirror.com/binary.html?path=chromedriver/
 ## geckodriver: https://github.com/mozilla/geckodriver/releases
 ## geckodriver Chinese mirror: https://repo.huaweicloud.com/geckodriver/
@@ -17,38 +17,37 @@
 
 provision:
   tasks:
-    # install chrome on mac os using dmg file 
+    # install chrome on mac os using dmg file
     - download: https://dl.google.com/chrome/mac/stable/GGRO/googlechrome.dmg
       cmds:
         - open -W {download_file_path}
-        - cp -r "/Volumes/Google Chrome/Google Chrome.app" /Applications/ 
+        - cp -r "/Volumes/Google Chrome/Google Chrome.app" /Applications/
 
     # install chrome on mac os using homebrew
     - cmds:
         - brew install google-chrome
-      
+
     # download and unzip chromedriver on windows, same for other drivers
     # here we suppose webdriver.path should set to ./chromedriver.exe
     - download: https://registry.npmmirror.com/-/binary/chromedriver/103.0.5060.24/chromedriver_win32.zip
       cmds:
         - powershell Expand-Archive {download_file_path} -Force -DestinationPath .
         - move /y chromedriver.exe chromedriver-latest.exe  # (optional) rename after unzip, but don't forget to change webdriver.path to ./chromedirver-latest.exe
-      
+
     # download and unzip chromedriver on mac osx, same for other drivers
-    # here we suppose webdriver.path is set to ./chromedriver 
+    # here we suppose webdriver.path is set to ./chromedriver
     - download: https://registry.npmmirror.com/-/binary/chromedriver/103.0.5060.24/chromedriver_mac64.zip
       cmds:
-        - unzip -f {download_file_path}
+        - unzip -o {download_file_path}
         - mv chromedriver chromedriver-latest  # (optional) rename after unzip, but don't forget to change webdriver.path to ./chromedriver-latest
-    
-    # install 7z on windows 
+
+    # install 7z on windows
     - download: https://www.7-zip.org/a/7z2107-x64.msi
       cmds:
         - msiexec /i "{download_file_path}" /qn /log 7z-install.log.txt
 
-    # download and unzip ffmpeg on windows 
+    # download and unzip ffmpeg on windows
     # please ensure you already have 7z installed
     - download: https://www.gyan.dev/ffmpeg/builds/ffmpeg-release-essentials.7z
       cmds:
         - "C:\Program Files\7-Zip\7z.exe" e {download_file_path}
-    
