--- a/examples/provision-tasks-gallery.yaml
+++ b/examples/provision-tasks-gallery.yaml
@@ -1,18 +1,23 @@
 # This file is to collect some useful provision tasks as an reference.
 # You can just copy tasks from here to build your own configuration file.
 
-# Webidriver download sites
+# Webidriver Download Sites
 
-## chromedriver: https://chromedriver.storage.googleapis.com/index.html
-## chromedriver Chinese mirror: https://registry.npmmirror.com/binary.html?path=chromedriver/
-## geckodriver: https://github.com/mozilla/geckodriver/releases
-## geckodriver Chinese mirror: https://repo.huaweicloud.com/geckodriver/
-## msedgedriver: https://developer.microsoft.com/en-us/microsoft-edge/tools/webdriver/
+## Official
+
+### chromedriver: https://chromedriver.storage.googleapis.com/index.html
+### geckodriver: https://github.com/mozilla/geckodriver/releases
+### msedgedriver: https://developer.microsoft.com/en-us/microsoft-edge/tools/webdriver/
+
+## China Mirror
+
+### chromedriver: https://registry.npmmirror.com/binary.html?path=chromedriver/
+### geckodriver: https://repo.huaweicloud.com/geckodriver/
+
 
 # Useful Tips
 
 ## How to install msi without interactive: https://stackoverflow.com/a/8560308/3099733
-## Download Chrome Extension crx (Chinese): https://crxdl.com/
 
 
 provision:
