--- a/package.json
+++ b/package.json
@@ -49,8 +49,7 @@
     "@types/yargs": "^15.0.10",
     "chrome-remote-interface": "^0.31.2",
     "ts-node": "^10.8.0",
-    "typescript": "^4.7.2",
-    "webdriverio": "^7.19.7"
+    "typescript": "^4.7.2"
   },
   "dependencies": {
     "@koa/router": "^10.1.1",
@@ -70,10 +69,10 @@
     "nanoid": "^3.3.4",
     "path-to-regexp": "^6.2.0",
     "purify-ts": "^1.1.0",
-    "selenium-webdriver": "^4.0.0",
     "shelljs": "^0.8.5",
     "systeminformation": "^5.11.15",
     "uuid": "^8.3.1",
+    "webdriverio": "^7.20.2",
     "yaml": "^1.10.0",
     "yargs": "^16.1.1",
     "yup": "^0.32.11"
