doc: update readme

--- a/examples/provision-tasks-gallery.yaml
+++ b/examples/provision-tasks-gallery.yaml
@@ -23,7 +23,10 @@
 provision:
   tasks:
     # auto upgrade selenium-federation (works on Windows and Mac)
-    # please use it with pm2 or else your service will be terimated after upgrade
+    ## Please use it with pm2 or else your service will be terimated after upgrade.
+    ## To trigger the auto upgrade from remote,
+    ## You need to access http://localhost:4444/termiate to termiate the current service,
+    ## and pm2 will start a new service for you automatically.
     - neverSkip: true
       cmds:
         - npm outdated -g selenium-federation || ( npm install -g selenium-federation && throw_error_to_restart )
